--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latihan pull request</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ini latihan pull request</h1>
+    <h1 class="judul">Ini latihan pull request</h1>
 
     <h3>Ini ceritanya judul artikel</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non cupiditate facere quas! Repellat maxime aperiam doloribus eius ipsam. Aliquam dolore illum consequatur, iusto laborum voluptatum fugit et quam similique perferendis, quibusdam, officia iure incidunt consequuntur libero voluptatem aperiam? Illum, minus veniam ratione autem expedita cum quo quia provident laboriosam, impedit possimus harum est et facilis debitis omnis quis officiis. Veritatis rerum, voluptates reiciendis illum ipsum error suscipit aut eos adipisci unde cum laboriosam ullam sunt quibusdam tempore illo deleniti natus?</p>
